# chatbot-aws-app

./: .gitignore  Dockerfile  Jenkinsfile  README.md  download_models.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_full.txt  run.py  streamlit_app.py
devops/: README.md
devops/ansible/: build-server-setup.yaml  hosts.tpl  jenkins-server-setup.yaml
devops/jenkins/: Jenkinsfile
devops/kubernetes/flaskGptApp/: Chart.yaml  values.yaml
devops/kubernetes/flaskGptApp/templates/: deplyoment.yaml  namespace.yaml  service.yaml
devops/kubernetes/slFaceApp/: Chart.yaml  values.yaml
devops/kubernetes/slFaceApp/templates/: deplyoment.yaml  service.yaml
devops/terraform/: main.tf  variables.tf
devops/terraform/ecr/: ecr.tf  output.tf  variables.tf
devops/terraform/eks/: eks.tf
devops/terraform/sg_eks/: sg.tf
images/: sources.txt
tests/: model_test.py  test_app.py
util/: get_version.py
website/: __init__.py  models.py  views.py
website/static/: index.js  style.css
website/templates/: base.html  home.html
website/utils/: utils.py
