[project]
name = "chatbot-aws-app"
version = "0.2"

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-final-newline",
    "missing-module-docstring",
    "invalid-name",
    "redefined-outer-name",
    "import-outside-toplevel",
    "too-few-public-methods"
]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true